use mdds position hint (tdf#131716)

Otherwise this is the usual case of possible quadratic mdds slowness.

Change-Id: I5b33df65e127702c011517d79b9cd41a7e820ca0